# photosort

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  organize-photos.py  photosort.py  pyproject.toml
data/: completion.bash
photosort/: LICENSE  __init__.py  cli.py  completion.py  config.py  console.py  constants.py  conversion.py  core.py  file_operations.py  history.py  livephoto.py  permissions.py  progress.py  stats.py  timestamps.py  utils.py
photosort/data/: completion.bash
scripts/: convert-to-hevc.py  install-completion.sh
tests/: conftest.py  create_test_media.py  test_basic_operations.py  test_configuration.py  test_file_organization.py  test_file_permissions.py  test_livephoto_processing.py  test_video_conversion.py
tests/example_media/: README.md
