[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photosort"
version = "2.0.0"
description = "Organize photos and videos"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joseph Monaco"}
]
requires-python = ">=3.8"
dependencies = [
    "rich>=10.0.0",
    "pyyaml>=6.0",
]
keywords = ["photos", "organization", "media", "files", "sort"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]

[project.scripts]
photosort = "photosort.cli:main"

# Include completion and scripts in package data
[tool.hatch.build]
include = [
    "photosort/completion/*",
    "scripts/*",
]

[project.urls]
Repository = "https://github.com/jdmonaco/photosort"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
]
