[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photosort"
dynamic = ["version"]
description = "Organize photos and videos"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joseph Monaco"}
]
requires-python = ">=3.8"
dependencies = [
    "rich>=10.0.0",
    "pyyaml>=6.0",
]
keywords = ["photos", "organization", "media", "files", "sort"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/jdmonaco/photosort"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.version]
path = "photosort/__init__.py"

[project.scripts]
photosort = "photosort.cli:main"

[tool.hatch.build]
include = [
    "photosort/**/*.py",
    "photosort/data/*",
]
